Оформление героя и елементы хедера

--- a/index.html
+++ b/index.html
@@ -27,13 +27,43 @@
         </a>
         <ul class="nav-list">
           <li>
-            <a class="nav-link" href="./index.html">Студия</a>
+            <a class="nav-link" href="./index.html"
+              ><p>Студия</p>
+              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+                <rect
+                  width="47"
+                  height="4"
+                  rx="2"
+                  fill="var(--secondary-color)"
+                />
+              </svg>
+            </a>
           </li>
           <li>
-            <a class="nav-link" href="./portfolio.html">Портфолио</a>
+            <a class="nav-link" href="./portfolio.html">
+              <p>Портфолио</p>
+              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+                <rect
+                  width="47"
+                  height="4"
+                  rx="2"
+                  fill="var(--secondary-color)"
+                />
+              </svg>
+            </a>
           </li>
           <li>
-            <a class="nav-link" href="">Контакты</a>
+            <a class="nav-link" href="">
+              <p>Контакты</p>
+              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+                <rect
+                  width="47"
+                  height="4"
+                  rx="2"
+                  fill="var(--secondary-color)"
+                />
+              </svg>
+            </a>
           </li>
         </ul>
       </nav>
@@ -41,24 +71,18 @@
         <ul class="address-list">
           <li>
             <a class="address-item" href="mailto:info@devstudio.com">
-              <img
-                src="./images/icon-mail.svg"
-                alt="icon mail"
-                width="14"
-                height="10"
-              />
-              info@devstudio.com
+              <svg width="16" height="11">
+                <use href="./images/icon-mail.svg#mail"></use>
+              </svg>
+              <p>info@devstudio.com</p>
             </a>
           </li>
           <li>
             <a class="address-item" href="tel:+380961111111">
-              <img
-                src="./images/icon-smartphone.svg"
-                alt="icon smartphone"
-                width="10"
-                height="14"
-              />
-              +38 096 111 11 11
+              <svg width="10" height="14">
+                <use href="./images/icon-smartphone.svg#icon-phone"></use>
+              </svg>
+              <p>+38 096 111 11 11</p>
             </a>
           </li>
         </ul>
