--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <ul class="nav-list">
           <li>
             <a class="nav-link" href="./index.html"
-              ><p>Студия</p>
+              >
+              <p>Студия</p>
               <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
                 <rect
                   width="47"
@@ -42,11 +43,11 @@
           <li>
             <a class="nav-link" href="./portfolio.html">
               <p>Портфолио</p>
-              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+              <svg width="60" height="4" viewBox="0 0 60 4" fill="none">
                 <rect
-                  width="47"
+                  width="60"
                   height="4"
-                  rx="2"
+                  rx="2px"
                   fill="var(--secondary-color)"
                 />
               </svg>
