Правильный спрайт оформление фютчез

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         </a>
         <ul class="nav-list">
           <li>
-            <a class="nav-link" href="./index.html"
-              >
+            <a class="nav-link" href="./index.html">
               <p>Студия</p>
               <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
                 <rect
@@ -72,16 +71,16 @@
         <ul class="address-list">
           <li>
             <a class="address-item" href="mailto:info@devstudio.com">
-              <svg width="16" height="11">
-                <use href="./images/icon-mail.svg#mail"></use>
+              <svg width="16px" height="11px">
+                <use href="./images/sprite.svg#mail"></use>
               </svg>
               <p>info@devstudio.com</p>
             </a>
           </li>
           <li>
             <a class="address-item" href="tel:+380961111111">
-              <svg width="10" height="14">
-                <use href="./images/icon-smartphone.svg#icon-phone"></use>
+              <svg width="10px" height="14px">
+                <use href="./images/sprite.svg#smartphone"></use>
               </svg>
               <p>+38 096 111 11 11</p>
             </a>
@@ -110,7 +109,9 @@
         <ul class="flex-box">
           <li class="features-item">
             <div class="features-img">
-              <img src="./images/icon-antenna.svg" alt="Антена" />
+              <svg class="features-icon" widht="70px" height="70px">
+                <use href="./images/sprite.svg#antenna"></use>
+              </svg>
             </div>
             <h3 class="features-subtitle">Внимание к деталям</h3>
             <p>
@@ -120,7 +121,9 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <img src="./images/icon-clock.svg" alt="Часы" />
+              <svg class="features-icon" widht="70px" height="70px">
+                <use href="./images/sprite.svg#clock"></use>
+              </svg>
             </div>
             <h3 class="features-subtitle">Пунктуальность</h3>
             <p>
@@ -130,7 +133,9 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <img src="./images/icon-diagram.svg" alt="Диаграмма" />
+              <svg class="features-icon" widht="70px" height="70px">
+                <use href="./images/sprite.svg#diagram"></use>
+              </svg>
             </div>
             <h3 class="features-subtitle">Планирование</h3>
             <p>
@@ -140,7 +145,9 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <img src="./images/icon-astronaut.svg" alt="Астронавт" />
+              <svg class="features-icon" widht="70px" height="70px">
+                <use href="./images/sprite.svg#astronaut"></use>
+              </svg>
             </div>
             <h3 class="features-subtitle">Современные технологии</h3>
             <p>
