Оптимизация всех картинок, один спрайт для всех иконок

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Домашняя работа 3</title>
+    <title>Домашняя работа 4</title>
   </head>
 
   <body>
@@ -27,41 +27,38 @@
         </a>
         <ul class="nav-list">
           <li>
-            <a class="nav-link" href="./index.html">
+            <a class="nav-link current-page" href="./index.html">
               <p>Студия</p>
-              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+              <svg width="48" height="4" viewBox="0 0 48 4" fill="none">
                 <rect
-                  width="47"
+                  width="48"
                   height="4"
                   rx="2"
-                  fill="var(--secondary-color)"
-                />
+                                  />
               </svg>
             </a>
           </li>
           <li>
             <a class="nav-link" href="./portfolio.html">
               <p>Портфолио</p>
-              <svg width="60" height="4" viewBox="0 0 60 4" fill="none">
+              <svg width="76" height="4" viewBox="0 0 76 4" fill="none">
                 <rect
-                  width="60"
+                  width="76"
                   height="4"
                   rx="2px"
-                  fill="var(--secondary-color)"
-                />
+                                  />
               </svg>
             </a>
           </li>
           <li>
             <a class="nav-link" href="">
               <p>Контакты</p>
-              <svg width="47" height="4" viewBox="0 0 47 4" fill="none">
+              <svg width="67" height="4" viewBox="0 0 67 4" fill="none">
                 <rect
-                  width="47"
+                  width="67"
                   height="4"
                   rx="2"
-                  fill="var(--secondary-color)"
-                />
+                                  />
               </svg>
             </a>
           </li>
@@ -109,7 +106,7 @@
         <ul class="flex-box">
           <li class="features-item">
             <div class="features-img">
-              <svg class="features-icon" widht="70px" height="70px">
+              <svg class="features-icon">
                 <use href="./images/sprite.svg#antenna"></use>
               </svg>
             </div>
@@ -121,7 +118,7 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <svg class="features-icon" widht="70px" height="70px">
+              <svg class="features-icon">
                 <use href="./images/sprite.svg#clock"></use>
               </svg>
             </div>
@@ -133,7 +130,7 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <svg class="features-icon" widht="70px" height="70px">
+              <svg class="features-icon">
                 <use href="./images/sprite.svg#diagram"></use>
               </svg>
             </div>
@@ -145,7 +142,7 @@
           </li>
           <li class="features-item">
             <div class="features-img">
-              <svg class="features-icon" widht="70px" height="70px">
+              <svg class="features-icon">
                 <use href="./images/sprite.svg#astronaut"></use>
               </svg>
             </div>
@@ -217,42 +214,30 @@
                 <ul class="bio-list flex-box">
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-instagram.svg"
-                        alt="иконка Инстаграм"
-                        width="20"
-                        height="20"
-                      />
+                     <svg class="social-icon">
+                       <use href="./images/sprite.svg#instagram"></use>
+                     </svg>  
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-twitter.svg"
-                        alt="иконка Твиттер"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg> 
+                      </a>
+                  </li>
+                  <li class="bio-item">
+                    <a class="bio-link" href="">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-facebook.svg"
-                        alt="иконка Фейсбук"
-                        width="20"
-                        height="20"
-                      />
-                    </a>
-                  </li>
-                  <li class="bio-item">
-                    <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-linkedin.svg"
-                        alt="иконка Линкедин"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -272,42 +257,30 @@
                 <ul class="bio-list flex-box">
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-instagram.svg"
-                        alt="иконка Инстаграм"
-                        width="20"
-                        height="20"
-                      />
+                     <svg class="social-icon">
+                       <use href="./images/sprite.svg#instagram"></use>
+                     </svg>  
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-twitter.svg"
-                        alt="иконка Твиттер"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg> 
+                      </a>
+                  </li>
+                  <li class="bio-item">
+                    <a class="bio-link" href="">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-facebook.svg"
-                        alt="иконка Фейсбук"
-                        width="20"
-                        height="20"
-                      />
-                    </a>
-                  </li>
-                  <li class="bio-item">
-                    <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-linkedin.svg"
-                        alt="иконка Линкедин"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -327,42 +300,30 @@
                 <ul class="bio-list flex-box">
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-instagram.svg"
-                        alt="иконка Инстаграм"
-                        width="20"
-                        height="20"
-                      />
+                     <svg class="social-icon">
+                       <use href="./images/sprite.svg#instagram"></use>
+                     </svg>  
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-twitter.svg"
-                        alt="иконка Твиттер"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg> 
+                      </a>
+                  </li>
+                  <li class="bio-item">
+                    <a class="bio-link" href="">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-facebook.svg"
-                        alt="иконка Фейсбук"
-                        width="20"
-                        height="20"
-                      />
-                    </a>
-                  </li>
-                  <li class="bio-item">
-                    <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-linkedin.svg"
-                        alt="иконка Линкедин"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -382,42 +343,30 @@
                 <ul class="bio-list flex-box">
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-instagram.svg"
-                        alt="иконка Инстаграм"
-                        width="20"
-                        height="20"
-                      />
+                     <svg class="social-icon">
+                       <use href="./images/sprite.svg#instagram"></use>
+                     </svg>  
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-twitter.svg"
-                        alt="иконка Твиттер"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg> 
+                      </a>
+                  </li>
+                  <li class="bio-item">
+                    <a class="bio-link" href="">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="bio-item">
                     <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-facebook.svg"
-                        alt="иконка Фейсбук"
-                        width="20"
-                        height="20"
-                      />
-                    </a>
-                  </li>
-                  <li class="bio-item">
-                    <a class="bio-link" href="">
-                      <img
-                        src="./images/icon-linkedin.svg"
-                        alt="иконка Линкедин"
-                        width="20"
-                        height="20"
-                      />
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -433,62 +382,44 @@
         <ul class="clients-list flex-box">
           <li class="client-item">
             <a href="" class="client-link">
-              <img
-                src="./images/logo-1.svg"
-                alt="я и ко"
-                width="45"
-                height="50"
-              />
+              <svg class="client-icon-1" width="44px" height="49px">
+                <use href="./images/sprite.svg#logo-1"></use>
+              </svg>
             </a>
           </li>
           <li class="client-item">
             <a class="client-link" href="">
-              <img
-                src="./images/logo-2.svg"
-                alt="Рамки"
-                width="40"
-                height="52"
-              />
+              <svg class="client-icon" width="40px" height="52px">
+                <use href="./images/sprite.svg#logo-2"></use>
+              </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="" class="client-link">
-              <img
-                src="./images/logo-3.svg"
-                alt="Надрезаный фрукт"
-                width="41"
-                height="42"
-              />
+              <svg class="client-icon" width="41px" height="43px">
+                <use href="./images/sprite.svg#logo-3"></use>
+              </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="" class="client-link">
-              <img
-                src="./images/logo-4.svg"
-                alt="Фостер петерс"
-                width="80"
-                height="42"
-              />
+              <svg class="client-icon" width="80px" height="42px">
+                <use href="./images/sprite.svg#logo-4"></use>
+              </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="" class="client-link">
-              <img
-                src="./images/logo-5.svg"
-                alt="Лист"
-                width="59"
-                height="47"
-              />
+              <svg class="client-icon" width="59px" height="47px">
+                <use href="./images/sprite.svg#logo-5"></use>
+              </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="" class="client-link">
-              <img
-                src="./images/logo-6.svg"
-                alt="Куб в изометрии"
-                width="88"
-                height="45"
-              />
+              <svg class="client-icon" width="88px" height="45px">
+                <use href="./images/sprite.svg#logo-6"></use>
+              </svg>
             </a>
           </li>
         </ul>
@@ -542,42 +473,30 @@
           <ul class="flex-box">
             <li class="social-item">
               <a class="social-link" href="">
-                <img
-                  src="./images/icon-instagram-white.svg"
-                  alt="иконка Инстаграм "
-                  width="20"
-                  height="20"
-                />
+                <svg class="social-icon">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <img
-                  src="./images/icon-twitter-white.svg"
-                  alt="иконка Твиттера"
-                  width="20"
-                  height="20"
-                />
+                <svg class="social-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <img
-                  src="./images/icon-facebook-white.svg"
-                  alt="иконка Фейсбука"
-                  width="20"
-                  height="20"
-                />
+                <svg class="social-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <img
-                  src="./images/icon-linkedin-white.svg"
-                  alt="иконка Ликедина"
-                  width="20"
-                  height="20"
-                />
+                <svg class="social-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -585,12 +504,17 @@
 
         <!-- Форма подпишись -->
         <div class="form-subscribe">
-          <p>
-            <b class="footer-subtitle">Подпишитесь на рассылку</b>
+          <p class="footer-subtitle">
+            Подпишитесь на рассылку
+            </p>
             <!-- какаято форма-->
-            <button class="sign-button" type="button">Подписаться</button>
-          </p>
-        </div>
+            <button class="sign-button" type="button">
+              <span>Подписаться</span>
+              <svg class="sign-icon">
+                <use href="./images/sprite.svg#send"></use>
+              </svg>
+            </button>
+                  </div>
       </div>
       <!-- Форму "Подписывайся" сказали не трогать" -->
     </footer>
